<resources>
    <string name="app_name">RestauranteWS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perfil">Perfil</string>
    <string name="pedidos">Pedidos</string>
    <string name="menu">Menu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="ciudad">Ciudad</string>

    <!--LOGIN-->
    <string name="signup_now">SIGNUP NOW</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripcion</string>
    <string name="continuar">Continuar</string>
</resources>